--- a/store/templates/seller_home.html
+++ b/store/templates/seller_home.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
     <body>
-        <div class="contain">
-        <div class="sign-in"><a href="/seller_login">Sign in</a></div>
-        <div class="sign-up"><a href="/seller_sign-up">Sign up</a></div>
+        <div class="main">
+            <div class="description">
+                <span>Shop Hub</span>
+            </div>
+            <div class="contain">
+                <div class="sign-in"><a href="/seller_login">Sign in</a></div>
+                <div class="sign-up"><a href="/seller_sign-up">Sign up</a></div>
+            </div>
         </div>
     </body>
 </html>
