--- a/store/static/styles/seller-signup.css
+++ b/store/static/styles/seller-signup.css
@@ -42,9 +42,9 @@ body {
 
 .welcome-me {
     display: flex;
-    flex-direction: column;
+    flex-direction: column;;
     margin-bottom: 70px;
-    width: 400px
+    width: 400px;
 }
 
 .hello-msg {
@@ -59,11 +59,13 @@ body {
     font-family: myFont;
     font-size: 30px;
 }
-.logging{
+.sign-up{
     display: flex;
     flex-direction: column;
     width: 400px;
+    
 }
+
 .content-div {
     display: flex;
     flex-direction: column;
@@ -131,6 +133,7 @@ input:focus {
     font-size: 20px;
 }
 
+
 @media only screen and (max-width: 767px) {
     .container {
         margin-top: 100px;
@@ -150,7 +153,7 @@ input:focus {
         font-family: myFont;
         font-size: 14px;
     }
-    .logging{
+    .sign-up{
         width: 200px;
     }    
     .em-cont {
@@ -210,7 +213,7 @@ input:focus {
         font-family: myFont;
         font-size: 15px;
     }
-    .logging{
+    .sign-up{
         width: 300px;
     }    
     .em-cont {
@@ -269,7 +272,7 @@ input:focus {
         font-family: myFont;
         font-size: 14px;
     }
-    .logging{
+    .sign-up{
         width: 180px;
     }    
     .em-cont {
