--- a/store/static/styles/seller_dashboard.css
+++ b/store/static/styles/seller_dashboard.css
@@ -24,17 +24,18 @@
 body {
     height: 100vh;
     background-color: var(--body-color);
+    transition: var(--tran-04);
 }
-.sidebar .text {
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--text-color);
+
+body.dark {
+    --body-color: #18191A;
+    --sidebar-color: #242526;
+    --primary-color: #3A3B3C;
+    --primary-color-light: #3A3B3C;
+    --toggle-color: #FFF;
+    --text-color: #CCC;
 }
-.sidebar .image {
-    min-width: 100px;
-    display: flex;
-    align-items: center;
-}
+
 .sidebar {
     position: fixed;
     top: 0;
@@ -43,6 +44,49 @@ body {
     width: 250px;
     background: var(--sidebar-color);
     padding: 10px 14px;
+    transition: var(--tran-05);
+    z-index: 100;
+}
+.sidebar.close {
+    width: 100px;
+}
+.sidebar .text {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-color);
+    transition: var(--tran-03);
+    white-space: nowrap;
+    opacity: 1;
+}
+
+.sidebar.close .text{
+    opacity: 0;
+}
+.sidebar .image {
+    min-width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sidebar li {
+    height: 50px;
+    margin-top: 10px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar li .icon {
+    font-size: 20px;
+    min-width: 60px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.sidebar li .icon, .sidebar li .text {
+    color: var( --text-color);
+    transition: var(--tran-02);
 }
 .sidebar header {
     position: relative;
@@ -71,7 +115,7 @@ header .image-text .header-text{
     top: 50%;
     right: -25px;
     color: var(--sidebar-color);
-    transform: translateY(-50%);
+    transform: translateY(-50%) rotate(180deg);
     height: 25px;
     width: 25px;
     background: var(--primary-color);
@@ -80,4 +124,144 @@ header .image-text .header-text{
     justify-content: center;
     border-radius: 50%;
     font-size: 22px;
+    transition: var(--tran-03);
+}
+
+.sidebar.close header .toggle{
+    transform: translateY(-50%);
+}
+body.dark .sidebar header .toggle
+{
+    color: var(--text-color);
+}
+.sidebar .menu {
+    margin-top: 35px;
+}
+.sidebar .search-box {
+    background: var(--primary-color-light);
+    border-radius: 6px;
+    transition: var(--tran-05);
+}
+.search-box input {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    background: var(--primary-color-light);
+    transition: var(--tran-05);
+    font-size: 16px;
+    font-weight: 500;
+}
+.sidebar li a {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items:center;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: var(--tran-04);
+}
+
+.sidebar li a:hover {
+    background: var(--primary-color);
+}
+.sidebar li a:hover .icon, .sidebar li a:hover .text {
+    color: var(--sidebar-color);
+}
+
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text {
+    color: var(--text-color);
+}
+
+.sidebar .menu-bar{
+    height: calc(100% - 60px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between
+}
+.menu-bar .mode {
+    position: relative;
+    border-radius: 6px;
+    background: var(--primary-color-light);
+}
+
+.menu-bar .mode .moon-sun {
+    height: 50px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+}
+.menu-bar .mode i {
+    position: absolute;
+    transition: var(--tran-03);
+}
+
+.menu-bar .mode i.sun {
+    opacity: 0;
+}
+
+body.dark .menu-bar .mode i.sun {
+    opacity: 1;
+}
+
+body.dark .menu-bar .mode i.moon{
+    opacity: 0;
+}
+.menu-bar .mode .toggle-switch {
+    position: absolute;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    min-width: 60px;
+    cursor: pointer;
+    border-radius: 6px;
+    background: var(--primary-color-light);
+    transition: var(--tran-05);
+    
+}
+.toggle-switch .switch {
+    position: relative;
+    height: 22px;
+    width: 44px;
+    border-radius: 25px;
+    background: var(--toggle-color);
+    transition: var(--tran-05);
+}
+.switch::before {
+    content: '';
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    background: var(--sidebar-color);
+    transition: var(--tran-03);
+}
+
+body.dark .switch::before {
+    left: 25px;
+}
+.home {
+    position: relative;
+    left: 250px;
+    height: 100vh;
+    width: calc(100% - 100px);
+    background: var(--body-color);
+    transition: var(--tran-05);
+}
+.home .text {
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--text-color);
+    padding: 8px 40px;
+}
+.sidebar.close ~ .home {
+    left: 100px;
+    width: calc(100% - 100px);
 }
