--- a/store/templates/sellers_dashboard.html
+++ b/store/templates/sellers_dashboard.html
@@ -10,7 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
     <body>
-        <nav class="sidebar">
+        <nav class="sidebar close">
             <header>
                 <div class="image-text">
                     <span class="image">
@@ -24,13 +24,61 @@
             </header>
             <div class="menu-bar">
                 <div class="menu">
+                    <li class="search-box">
+                            <i class='bx bx-search icon'></i>
+                            <input type="search" placeholder="Search..">
+                    </li>
                     <ul class="menu-links">
                         <li class="nav-link">
                             <a href="/dashboard">
-                                <i class='bx bx-analyse'></i>
+                                <i class='bx bx-analyse icon'></i>
                                 <span class="text nav-text">Dashboard</span>
                             </a>
-                            </li>
+                        </li>
+                        <li class="nav-link">
+                            <a href="/dashboard">
+                                <i class='bx bx-cart-alt icon'></i>
+                                <span class="text nav-text">Orders</span>
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="/dashboard">
+                                <i class='bx bx-group icon'></i>
+                                <span class="text nav-text">Customers</span>
+                            </a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="/dashboard">
+                                <i class='bx bx-objects-horizontal-left icon'></i>
+                                <span class="text nav-text">Activites</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bottom-content">
+                    <li class="">
+                        <a href="#">
+                            <i class='bx bx-log-out icon'></i>
+                            <span class="text nav-text">Logout</span>
+                        </a>
+                    </li>
+                    <li class="mode">
+                        <div class="moon-sun">
+                            <i class='bx bx-moon icon moon'></i>
+                            <i class='bx bx-sun icon sun'></i>
+                        </div>
+                        <span class="mode-text text">Dark Mode</span>
+                        <div class="toggle-switch">
+                            <span class="switch"></span>
+                        </div>
+                    </li>
+                </div>
+            </div>
         </nav>
+
+        <section class="home">
+            <div class="text">Dashboard</div>
+        </section>
+        <script src="../static/Scripts/1s-dashboard.js"></script> 
     </body>
 </html>
