--- a/store/templates/sellers_dashboard.html
+++ b/store/templates/sellers_dashboard.html
@@ -78,6 +78,44 @@
 
         <section class="home">
             <div class="text">Dashboard</div>
+            <div class="main-container">
+                <div class="container">
+                    <div class="inner-contain">
+                        <span class="text1">TODAY'S SALE</span>
+                        <div class="sp-text">
+                            <span class="text2">&#8358;33,426</span>
+                            <span class="text3">+36%</span>
+                        </div>
+                    </div>
+                    <div class="inner-contain">
+                        <span class="text1">TOTAL'S SALE</span>
+                        <div class="sp-text">
+                            <span class="text2">&#8358;12,426</span>
+                            <span class="text3">+36%</span>
+                        </div>
+                    </div>
+                    <div class="inner-contain">
+                        <span class="text1">TOTAL ORDERS</span>
+                        <div class="sp-text">
+                            <span class="text2">8,395</span>
+                            <span class="text3">+36%</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="container2">
+                    <div class="transactions">
+                        <div class="sub-head">
+                            <span class="txt1">Transactions</span>
+                            <span class="txt2"><a href="#">See All Transactions</a></span>
+                        </div>
+                    </div>
+                    <div class="the-customers">
+                        <div class="txt4">
+                            <span class="sp-1">Recent Customers</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <script src="../static/Scripts/1s-dashboard.js"></script> 
     </body>
