--- a/store/templates/sellers_dashboard.html
+++ b/store/templates/sellers_dashboard.html
@@ -108,10 +108,55 @@
                             <span class="txt1">Transactions</span>
                             <span class="txt2"><a href="#">See All Transactions</a></span>
                         </div>
+                        <div class="comp-transaction">
+                            <div class="comp">
+                                <div class="status">
+                                <span class="outer-span"><div class="inner-span"></div>Completed</span>
+                                </div>
+                                <div class="payment-type">
+                                    <span class="type">Visa card</span>
+                                    <span class="type2">card payment</span>
+                                </div>
+                                <div class="amount-date">
+                                    <span class="amount">&#8358;11,246</span>
+                                    <span class="date">Jan 17, 2023</span>
+                                </div>
+                                <div class="item">
+                                    <span class="items">Louis Vuitton</span>
+                                    <span class="dots"><i class='bx bx-dots-horizontal-rounded'></i></span>
+                                </div>
+                            </div>
+                            <div class="comp">
+                                <div class="status">
+                                <span class="outer-span"><div class="inner-span"></div>Completed</span>
+                                </div>
+                                <div class="payment-type">
+                                    <span class="type">Visa card</span>
+                                    <span class="type2">card payment</span>
+                                </div>
+                                <div class="amount-date">
+                                    <span class="amount">&#8358;11,246</span>
+                                    <span class="date">Jan 17, 2023</span>
+                                </div>
+                                <div class="item">
+                                    <span class="items">Louis Vuitton</span>
+                                    <span class="dots"><i class='bx bx-dots-horizontal-rounded'></i></span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="the-customers">
                         <div class="txt4">
                             <span class="sp-1">Recent Customers</span>
+                        </div>
+                        <div class="customer-info">
+                            <div class="info1">
+                                <span class="name">Thomas wellington</span>
+                                <span class="email">thomaswellington@gmail.com</span>
+                            </div>
+                            <div class="info-amount">
+                                <span class="amount-info">&#8358;11,246</span>
+                            </div>
                         </div>
                     </div>
                 </div>
