--- a/store/static/styles/sellers_orders.css
+++ b/store/static/styles/sellers_orders.css
@@ -7,6 +7,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+@font-face {
+    font-family: myFont;
+    src: url(Quesha.ttf);
+}
 
 :root {
     --body-color: #E4E9F7;
@@ -267,7 +271,7 @@ body.dark .switch::before {
 .home .text {
     font-size: 25px;
     font-weight: 500;
-    color: var(--text-color);
+    color: var(--black-color);
     padding: 10px 35px;
     height: 50px;
     width: 100%;
@@ -277,121 +281,118 @@ body.dark .switch::before {
     left: 100px;
     width: calc(100% - 100px);
 }
-
-body {
-    background: white;
-    position: relative;
+.main {
+    margin: 0;
+    padding: 0;
+    width: 99%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    padding: 10px 20px;
+    margin: 20px  10px;
+    background: var(--sidebar-color);
 }
-.main-contain {
-    display: flex;
-    width: 100%;
-}
 
-.column-1 {
-    width: 400px;
-    max-width: 400px;
-    background-color:white; 
+.main .customer-name {
     display: flex;
     flex-direction: column;
-    border-right: 1px solid rgb(235, 233, 233);
+    justify-content: space-between;
 }
-label.logo {
-    font-size: 30px;
-    color: black;
-    padding: 30px 10px;
-    font-weight: medium;
-    font-family: myFont3;
-    background-color: orange; 
-    border-top-left-radius: 10px;
-}
-
-.home-div, .productboard {
-    width: 100%;
-    padding: 20px 40px;
-    font-family: myFont4;
-    background-color: orange;
-}
-.productboard {
-    border-bottom-right-radius: 10px; 
-}
-.column-1 a {
-    text-decoration: none;
-    color: black;
-}
-
-.home-div:hover, .productboard:hover {
-    background-color: white;
-    border-right: 1px solid  rgb(241, 236, 236);
-    border-top-right-radius: 30px; 
-    border-bottom-right-radius: 30px;
-    width: 105%;
-}
-
-.column-2 {
-    flex-grow: 1;
-    background-color: white;
-    padding: 20px;
-}
-h3 {
-    padding: 0;
-    padding-bottom: 15px;
-    font-family: myFont;
-    font-size: 30px;
-}
-.topnav {
-    width: 300px;
-    height: 45px;
-    background-color: rgb(250, 250, 250);
-    display: flex;
-    border-radius: 25px;
-}
-.topnav input {
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    color: #cac7ff;
-    font-size: 15px;
-}
-
-input::placeholder {
-    color: #cac7ff;
-}
-.topnav button {
-    border: none;
-    outline: none;
-    background: transparent;
-    padding-left: 10px;
-    padding-right: 8px;
-    color: #cac7ff;
-}
-.order-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    margin-top: 10px;
-    font-family: myFont5;
-}
-.colon-names {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    font-family: myFont;
-    font-size: 25px;
-    font-weight: 400;
-}
-
-.customer-name-div, .customer-order-date, .quant, .inches,
-.product-name, .price-product, .total-price {
-    font-family: myFont;
-    font-size: 20px;
-    margin-bottom: 30px; 
-}
-.cust-email, .date-data, .product-data, .quant-data, 
-.price-data, .total-data{
-    color: rgb(100, 100, 100);
-}
-.date-colon {
+.main .customer-name .customer-colon {
+    padding-top: 7px;
     padding-bottom: 20px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.main .customer-name .customer-colon input {
+     width: 14px;
+     margin-right: 10px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+  
+  /* Style the custom checkbox */
+.main .customer-name .customer-colon input[type="checkbox"] {
+    position: relative;
+    cursor: pointer;
+}
+
+.main .customer-name .customer-colon input[type="checkbox"]::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -3px;
+    width: 14px;
+    height: 14px;
+    border: 2px solid rgb(199, 195, 195); /* Change the border color and size as needed */
+    background-color: #fff;
+    border-radius: 5px;
+}
+.main .customer-name .customer-colon .customer-lane{
+    font-size: 15px;
+    color: var(--black-color);
+    font-weight: 600;
+    margin-right: 7px;
+} 
+.main .customer-name .customer-colon .arrow-up {
+    font-size: 20px;
+    text-align: center;
+}
+.main .customer-name .customer-main3 {
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+
+.main .customer-name .customer-main3 .the-check2 {
+    display: block;
+    width: 15%;
+    padding: 0;
+    padding-right: 30px;
+}
+.main .customer-name .customer-main3 .the-check2 input {
+    width: 14px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.main .customer-name .customer-main3 .the-check2 input[type="checkbox"]{
+    position: relative;
+    cursor: pointer;
+}
+
+.main .customer-name .customer-main3 .the-check2 input[type="checkbox"]::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -2px;
+    width: 14px;
+    height: 14px;
+    border: 2px solid rgb(199, 195, 195); /* Change the border color and size as needed */
+    background-color: #fff;
+    border-radius: 5px;
+}
+.main .customer-name .customer-main3 .custname {
+    display: flex;
+    width: 80%;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+.main .customer-name .customer-main3 .custname .cust-name1 {
+    font-size: 14px;
+    color: var(--black-color);
+    font-weight: 500;
+    white-space: nowrap;
+}
+.main .customer-name .customer-main3 .custname .cust-email {
+    font-size: 20px;
+    color: var(--text-color);
+    font-family: myFont;
 }
