--- a/store/templates/sellers_orders.html
+++ b/store/templates/sellers_orders.html
@@ -78,36 +78,34 @@
         <section class="home">
             <div class="text">Orders</div>
             <div class="main">
-                <div class=colon-names>
-                    <span class="cust-colon">Customer</span><span class="date-colon">Order Date</span>
-                    <span class="product-name-colon">Product Name</span><span class="quant-colon">Quantity</span><span class="inches-colon">Gram</span>
-                    <span class="product-price-colon">Price</span><span class="total-price-colon">Total</span>
-                </div>
-                    <div class=order-content>
-                            <div class="customer-name-div">
-                                <span class="customer-name">Thomas Wellington</span>
-                                <span class="cust-email">thomaswellington@gmail.com</span>
-                            </div>
-                            <div class="customer-order-date">
-                                <span class="date-data">jan 27, 2023</span>
-                            </div>
-                            <div class="product-name">
-                                <span class="product-data">Louis Vuiyton</span>
-                            </div>
-                            <div class="quant">
-                                <span class="quant-data">1</span>
-                            </div>
-                            <div class="inches">
-                                <span class="inches-data">300gram</span>
-                            </div>
-                            <div class="price-product">
-                                <span class="price-data">&#8358;11,426</span>
-                            </div>
-                            <div class="total-price">&#8358;11,426</span>
-                            </div>
+                <div class="customer-name">
+                    <div class="customer-colon">
+                        <input type="checkbox" id="check1">
+                        <span class="customer-lane">Customer</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="customer-main3">
+                        <div class="the-check2"><input type="checkbox" id="check1"></div>
+                        <div class="custname">
+                            <span class="cust-name1">Thomas Wellington</span>
+                            <span class="cust-email">thomaswellington@gmail.com</span>
                         </div>
-                    </div> 
-            </div>
+                    </div>
+                </div>
+                <div class="order-date">
+                </div>
+                <div class="payment-status">
+                </div>
+                <div class="payment-date">
+                </div>
+                <div class="quantity">
+                </div>
+                <div class="order-details">
+                </div>
+                <div class="order-price">
+                </div>
+                <div class=total-price>
+                </div>
             </div>
         </section>
         <script src="../static/Scripts/1s-dashboard.js"></script> 
