--- a/store/templates/sellers_orders.html
+++ b/store/templates/sellers_orders.html
@@ -92,19 +92,68 @@
                         </div>
                     </div>
                 </div>
-                <div class="order-date">
-                </div>
                 <div class="payment-status">
+                    <div class="status-colon">
+                        <span class="label-status">Status</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="real-status">
+                        <span class="span-status">Paid</span>
+                    </div>
                 </div>
                 <div class="payment-date">
+                    <div class="date-colon">
+                        <span class="label-date">Payment Date</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="real-date">
+                        <span class="span-date">Mar 27,2023</span>
+                    </div>
                 </div>
                 <div class="quantity">
+                    <div class="date-colon">
+                        <span class="label-date">Quantity</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="real-date">
+                        <span class="span-date">2Qty</span>
+                    </div>
                 </div>
                 <div class="order-details">
+                    <div class="product-name">
+                        <span class="product">Product Name</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="real-product">
+                        <span class="span-product">Louis Vuitton T-shirt</span>
+                    </div>
+                </div>
+                <div class="order-date">
+                    <div class="date-colon">
+                        <span class="label-date">Size</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="real-date">
+                        <span class="span-date">Mar 27,2023</span>
+                    </div>
                 </div>
                 <div class="order-price">
+                    <div class="product-price">
+                        <span class="price">Price</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="real-price">
+                        <span class="span-price">&#8358;11,246</span>
+                    </div>
                 </div>
-                <div class=total-price>
+                <div class="total-price">
+                    <div class="product-price">
+                        <span class="price">Total Price</span>
+                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    </div>
+                    <div class="real-price">
+                        <span class="span-price">&#8358;11,246</span>
+                    </div>
                 </div>
             </div>
         </section>
