--- a/store/templates/sellers_orders.html
+++ b/store/templates/sellers_orders.html
@@ -77,84 +77,124 @@
         </nav>
         <section class="home">
             <div class="text">Orders</div>
-            <div class="main">
-                <div class="customer-name">
-                    <div class="customer-colon">
-                        <input type="checkbox" id="check1">
-                        <span class="customer-lane">Customer</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
-                    </div>
-                    <div class="customer-main3">
-                        <div class="the-check2"><input type="checkbox" id="check1"></div>
-                        <div class="custname">
-                            <span class="cust-name1">Thomas Wellington</span>
-                            <span class="cust-email">thomaswellington@gmail.com</span>
+                <div class="main">
+                    <div class="customer-name">
+                        <div class="customer-colon">
+                            <input type="checkbox" id="check1">
+                            <span class="customer-lane">Customer</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="customer-main3">
+                            <div class="the-check2"><input type="checkbox" id="check1"></div>
+                            <div class="custname">
+                                <span class="cust-name1">Thomas Wellington</span>
+                                <span class="cust-email">thomaswellington@gmail.com</span>
+                            </div>
+                        </div>
+                        <div class="customer-main3">
+                            <div class="the-check2"><input type="checkbox" id="check1"></div>
+                            <div class="custname">
+                                <span class="cust-name1">Sharon Banks</span>
+                                <span class="cust-email">sharonbanks@gmail.com</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="payment-status">
-                    <div class="status-colon">
-                        <span class="label-status">Status</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    <div class="payment-status">
+                        <div class="status-colon">
+                            <span class="label-status">Status</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-status">
+                            <span class="span-status">Paid</span>
+                        </div>
+                        <div class="real-status">
+                            <span class="span-status">Paid</span>
+                        </div>
                     </div>
-                    <div class="real-status">
-                        <span class="span-status">Paid</span>
+                    <div class="payment-date">
+                        <div class="date-colon">
+                            <span class="label-date">Payment Date</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">Mar 27,2023</span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">Mar 27,2023</span>
+                        </div>
                     </div>
-                </div>
-                <div class="payment-date">
-                    <div class="date-colon">
-                        <span class="label-date">Payment Date</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    <div class="quantity">
+                        <div class="date-colon">
+                            <span class="label-date">Quantity</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">2Qty</span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">2Qty</span>
+                        </div>
                     </div>
-                    <div class="real-date">
-                        <span class="span-date">Mar 27,2023</span>
+                    <div class="order-details">
+                        <div class="product-name">
+                            <span class="product">Product Name</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-product">
+                            <span class="span-product">Louis Vuitton T-shirt</span>
+                        </div>
+                        <div class="real-product">
+                            <span class="span-product">Gucci T-shirt</span>
+                        </div>
                     </div>
-                </div>
-                <div class="quantity">
-                    <div class="date-colon">
-                        <span class="label-date">Quantity</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    <div class="order-date">
+                        <div class="date-colon">
+                            <span class="label-date">Size</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">XL</span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">SM</span>
+                        </div>
                     </div>
-                    <div class="real-date">
-                        <span class="span-date">2Qty</span>
+                    <div class="order-date">
+                        <div class="date-colon">
+                            <span class="label-date">Color</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">Blue</span>
+                        </div>
+                        <div class="real-date">
+                            <span class="span-date">White</span>
+                        </div>
                     </div>
-                </div>
-                <div class="order-details">
-                    <div class="product-name">
-                        <span class="product">Product Name</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                    <div class="order-price">
+                        <div class="product-price">
+                            <span class="price">Price</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-price">
+                            <span class="span-price">&#8358;11,246</span>
+                        </div>
+                        <div class="real-price">
+                            <span class="span-price">&#8358;7,623</span>
+                        </div>
                     </div>
-                    <div class="real-product">
-                        <span class="span-product">Louis Vuitton T-shirt</span>
+                    <div class="total-price">
+                        <div class="product-price">
+                            <span class="price">Total Price</span>
+                            <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
+                        </div>
+                        <div class="real-price">
+                            <span class="span-price">&#8358;15,623</span>
+                        </div>
+                        <div class="real-price">
+                            <span class="span-price">&#8358;15,246</span>
+                        </div>
                     </div>
-                </div>
-                <div class="order-date">
-                    <div class="date-colon">
-                        <span class="label-date">Size</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
-                    </div>
-                    <div class="real-date">
-                        <span class="span-date">Mar 27,2023</span>
-                    </div>
-                </div>
-                <div class="order-price">
-                    <div class="product-price">
-                        <span class="price">Price</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
-                    </div>
-                    <div class="real-price">
-                        <span class="span-price">&#8358;11,246</span>
-                    </div>
-                </div>
-                <div class="total-price">
-                    <div class="product-price">
-                        <span class="price">Total Price</span>
-                        <span class="arrow-up"><i class='bx bx-chevron-down'></i></span>
-                    </div>
-                    <div class="real-price">
-                        <span class="span-price">&#8358;11,246</span>
-                    </div>
-                </div>
             </div>
         </section>
         <script src="../static/Scripts/1s-dashboard.js"></script> 
