--- a/store/static/styles/seller_customer.css
+++ b/store/static/styles/seller_customer.css
@@ -15,7 +15,7 @@
 :root {
     --body-color: #E4E9F7;
     --sidebar-color: #FFF;
-    --border-color: rgb(199, 195, 195);
+    --border-color: rgb(236, 233, 233);
     --border-color2: rgb(218, 216, 216);
     --primary-color: black;
     --primary-color-light: #F6F5FF;
@@ -46,19 +46,8 @@ body.dark {
     --sidebar-color: #242526;
     --primary-color: #3A3B3C;
     --primary-color-light: #3A3B3C;
-    --border-color:  rgb(112, 112, 238);
-    --border-color2: rgb(51, 50, 50); 
-    --primary-color: black;
-    --primary-color-light: #F6F5FF;
-    --completed-color: green;
-    --completed-background: rgb(194, 255, 194);;
-    --pending-color: rgb(243, 175, 49);
-    --pending-background: rgb(245, 212, 151);
-    --canceled-color: red;
-    --canceled-background: rgb(238, 188, 188);
-    --black-color: turquoise;
     --toggle-color: #FFF;
-    --text-color: #8a8a8a;
+    --text-color: #CCC;
 }
 
 .sidebar {
@@ -293,221 +282,4 @@ body.dark .switch::before {
     left: 100px;
     width: calc(100% - 100px);
     max-width: calc(100% - 100px);
-}
-
-.main {
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    background: var(--sidebar-color);
-    grid-column-gap: 1.5%;
-    box-shadow: 0px 3px 5px var(--border-color2);
-    padding: 10px 20px;
-    margin: 20px  10px;
-}
-.main span {
-    white-space: nowrap;
-}
-.main .customer-name {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.main .customer-name .customer-colon {
-    padding-top: 7px;
-    padding-bottom: 20px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
-
-.main .customer-name .customer-colon input {
-    width: 14px;
-    margin-right: 10px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.main .customer-name .customer-colon input[type="checkbox"] {
-    position: relative;
-    cursor: pointer;
-}
-
-.main .customer-name .customer-colon input[type="checkbox"]::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: -3px;
-    width: 14px;
-    height: 14px;
-    border: 2px solid var(--border-color) ; 
-    background: white;
-    border-radius: 5px;
-}
-.main .customer-name .customer-colon .customer-lane{
-    font-size: 15px;
-    color: var(--black-color);
-    font-weight: 600;
-    margin-right: 7px;
-} 
-.main .customer-name .customer-colon .arrow-up {
-    font-size: 20px;
-    text-align: center;
-}
-.main .customer-name .customer-main3 {
-    display: flex;
-    padding: 0;
-    margin: 0;
-}
-
-.main .customer-name .customer-main3 .the-check2 {
-    display: block;
-    width: 15%;
-    padding: 0;
-    padding-right: 5px;
-}
-.main .customer-name .customer-main3 .the-check2 input {
-    width: 14px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.main .customer-name .customer-main3 .the-check2 input[type="checkbox"]{
-    position: relative;
-    cursor: pointer;
-}
-
-.main .customer-name .customer-main3 .the-check2 input[type="checkbox"]::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: -2px;
-    width: 14px;
-    height: 14px;
-    border: 2px solid var(--border-color);
-    background-color: #fff;
-    border-radius: 5px;
-}
-.main .customer-name .customer-main3 .custname {
-    display: flex;
-    width: 80%;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-}
-.main .customer-name .customer-main3 .custname .cust-name1 {
-    font-size: 14px;
-    color: var(--black-color);
-    font-weight: 500;
-    white-space: nowrap;
-}
-.main .customer-name .customer-main3 .custname .cust-email {
-    font-size: 20px;
-    color: var(--text-color);
-    font-family: myFont;
-}
-.main .order-date,
-.main .payment-date,
-.main .quantity,
-.main .order-details,
-.main .order-price,
-.main .total-price {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-.main .order-date .date-colon ,
-.main .payment-date .date-colon,
-.main .quantity .date-colon,
-.main .order-details .product-name,
-.main .order-price .product-price,
-.main .total-price .product-price{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    padding-top: 7px;
-    padding-bottom: 20px;
-}
-.main .order-date .date-colon .label-date,
-.main .payment-date .date-colon .label-date,
-.main .quantity .date-colon .label-date,
-.main .order-details .product-name .product,
-.main .order-price .product-price .price,
-.main .total-price .product-price .price {
-    font-size: 15px;
-    color: var(--black-color);
-    font-weight: 600;
-    margin-right: 7px;
-}
-
-.main .order-date .date-colon .arrow-up,
-.main .payment-date .date-colon .arrow-up,
-.main .quantity .date-colon .arrow-up,
-.main .order-details .product-name .arrow-up,
-.main .order-price .product-price .arrow-up,
-.main .total-price .product-price .arrow-up  {
-    font-size: 20px;
-    text-align: center;
-    color: var(--black-color);
-}
-.main .order-date .real-date,
-.main .payment-date .real-date,
-.main .payment-status .real-status,
-.main .quantity .real-date,
-.main .order-details .real-product,
-.main .order-price .real-price,
-.main .total-price .real-price  {
-    display: flex;
-    font-size: 14px;
-    padding: 0;
-    margin: 0;
-    font-weight: 500;
-    color: var(--text-color);
-    margin: 10px 0;
-}
-.main .payment-status {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-.main .payment-status .status-colon {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    padding-top: 7px;
-    padding-bottom: 20px;
-}
-.main .payment-status .status-colon .label-status {
-    font-size: 15px;
-    color: var(--black-color);
-    font-weight: 600;
-    margin-right: 7px;
-}
-
-.main .payment-status .status-colon .arrow-up {
-    font-size: 20px;
-    text-align: center;
-    color: var(--black-color);
-}
-.main .payment-status .real-status {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    margin: 10px 0;
-    font-weight: 500;
-    color: var(--text-color);
-}
-.main .payment-status .real-status .span-status {
-    font-size: 14px;
-    background: rgb(248, 248, 248);
-    padding: 3px 5px;
-    color: #22f58c;
-    border-radius: 12px;
 }
