sellers order updated

--- a/store/static/styles/sellers_orders.css
+++ b/store/static/styles/sellers_orders.css
@@ -46,7 +46,7 @@ body.dark {
     --sidebar-color: #242526;
     --primary-color: #3A3B3C;
     --primary-color-light: #3A3B3C;
-    --border-color:  rgb(112, 112, 238);
+    /* --border-color:  rgb(112, 112, 238); */
     --border-color2: rgb(51, 50, 50); 
     --primary-color: black;
     --primary-color-light: #F6F5FF;
